<resources>
    <string name="app_name">SARestaurant</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--MainActivity-->
    <string name="text">Please give needed permission to use feature of our application.</string>
    <string name="request_permission">Request Permission</string>

    <!--Sign In-->
    <string name="email_or_username">Email or Username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here.</string>
    <string name="app_logo">App Logo</string>
    <string name="sarestaurant">SARestaurant</string>
    <string name="facebook_app_id">499167327201560</string>
    <string name="fb_login_protocol_scheme">fb499167327201560</string>
    <string name="facebook_sign_in">Facebook Sign In</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="weather">Weather</string>
    <string name="logout">Logout</string>

    <!--Sign Up-->
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="sign_up">Sign Up</string>

    <!--Restaurant Fragment-->
    <string name="restLogo">RestLogo</string>
    <string name="google_maps_key">AIzaSyC6Smj8wi2qTcaacRBzOVRBNpZUTpEIgvg</string>
    <!--<string name="google_maps_key">AIzaSyC_rQ7nR2KJiDKt2cNl2e6eREwh80dGDTI</string>-->
    <!--<string name="google_maps_key">AIzaSyCEHTix-cuZqUpSZ9olJKQzyi7u87ZtJZU</string>-->


    <!--Map-->
    <string name="map">Map</string>
    <string name="show_map">Show Map</string>
    <string name="change_map_type">Change Map Type</string>

    <!--Detailed Fragment-->
    <string name="restaurant_name">Restaurant Name :</string>
    <string name="restaurant_address">Restaurant Address :</string>
    <string name="is_available_to_serve_you">Is available to serve you? :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">No Data Available</string>
    <string name="no_rate_available">No Ratings Available</string>

    <string name="previous">Play</string>
    <string name="weather_image">Weather Image</string>
    <string name="navigation_image">Navigation Image</string>
    <string name="slide_description">Slide Description</string>

    <!--Temperature-->
    <string name="temperature">Temp:</string>
    <string name="your_location">Your Location</string>
    <string name="enter_valid_details">Enter Valid Details.</string>
    <string name="logout_dialog">Are you sure you want to Logout?</string>
    <string name="logout_txt">Logout</string>
    <string name="close_dialog">Closing Activity</string>
    <string name="close_txt">Are you sure you want to close this activity?</string>
    <string name="f">F</string>
    <string name="permission_rationale_dialog">This permission is needed because of fetching nearby restaurant list</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_dialog">and fetching weather data.</string>
    <string name="weatherData">Current Temperature</string>
    <string name="refresh">Pull to Refresh</string>
    <string name="no_data_found">No Data Found:(</string>
    <string name="ok">OKAY</string>
    <string name="empty_list">List is Empty</string>

</resources>